--- a/test/index.html
+++ b/test/index.html
@@ -20,10 +20,12 @@
 		<!--load your scripts in here-->
 		<script src="../exemplar.js" type="text/javascript"></script>
 		<script src="../events.js" type="text/javascript"></script>
+		<script src="../attr.js" type="text/javascript"></script>
 		<script src="fixtures.js" type="text/javascript"></script>
 
 		<!--load tests-->
 		<script src="test_exemplar.js" type="text/javascript"></script>
 		<script src="test_events.js" type="text/javascript"></script>
+		<script src="test_attr.js" type="text/javascript"></script>
 	</body>
 </html>
