--- a/test/index.html
+++ b/test/index.html
@@ -21,11 +21,13 @@
 		<script src="../exemplar.js" type="text/javascript"></script>
 		<script src="../events.js" type="text/javascript"></script>
 		<script src="../attr.js" type="text/javascript"></script>
+		<script src="../fp.js" type="text/javascript"></script>
 		<script src="fixtures.js" type="text/javascript"></script>
 
 		<!--load tests-->
 		<script src="test_exemplar.js" type="text/javascript"></script>
 		<script src="test_events.js" type="text/javascript"></script>
 		<script src="test_attr.js" type="text/javascript"></script>
+		<script src="test_fp.js" type="text/javascript"></script>
 	</body>
 </html>
