--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
 		<script src="../events.js" type="text/javascript"></script>
 		<script src="../attr.js" type="text/javascript"></script>
 		<script src="../fp.js" type="text/javascript"></script>
+		<script src="../domb.js" type="text/javascript"></script>
 		<script src="fixtures.js" type="text/javascript"></script>
 
 		<!--load tests-->
