--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,8 @@
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 
+		<div id="sandbox"></div>
+
 		<!--load QUnit and dependencies-->
 		<script src="lib/qunit.js" type="text/javascript"></script>
 		<script src="lib/jquery.js" type="text/javascript"></script>
@@ -30,5 +32,6 @@
 		<script src="test_events.js" type="text/javascript"></script>
 		<script src="test_attr.js" type="text/javascript"></script>
 		<script src="test_fp.js" type="text/javascript"></script>
+		<script src="test_domb.js" type="text/javascript"></script>
 	</body>
 </html>
