Added component.js file ready for deploying

--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,8 @@
 			<button>I'm a button</button>
 		</div>
 
-		<script type="text/javascript" src="events.js"></script>
-		<script type="text/javascript" src="exemplar.js"></script>
+		<script type="text/javascript" src="src/events.js"></script>
+		<script type="text/javascript" src="src/exemplar.js"></script>
 		<script style="display: block; white-space: pre; font-family: courier;">
 		var Ev = new Emitter();
 
