--- a/test/index.html
+++ b/test/index.html
@@ -20,11 +20,11 @@
 
 
 		<!--load your scripts in here-->
-		<script src="../exemplar.js" type="text/javascript"></script>
-		<script src="../events.js" type="text/javascript"></script>
-		<script src="../attr.js" type="text/javascript"></script>
-		<script src="../fp.js" type="text/javascript"></script>
-		<script src="../domb.js" type="text/javascript"></script>
+		<script src="../src/exemplar.js" type="text/javascript"></script>
+		<script src="../src/events.js" type="text/javascript"></script>
+		<script src="../src/attr.js" type="text/javascript"></script>
+		<script src="../src/fp.js" type="text/javascript"></script>
+		<script src="../src/domb.js" type="text/javascript"></script>
 		<script src="fixtures.js" type="text/javascript"></script>
 
 		<!--load tests-->
